# rustpolnak

./: .devenv.flake.nix  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  devenv.nix  flake.nix  rustpolnak.toml.example
.github/actions/setup-devenv/: action.yml
.github/workflows/: rust.yml  test.yml
assets/: main.css
src/: config.rs  lib.rs  main.rs  printer.rs  race.rs  race_events.rs  race_log.rs  restclient.rs  rfid_reader.rs  sort_table.rs  sorter.rs  time_utils.rs
src/components/: app.rs  categories_list.rs  manual_start_number_input.rs  mod.rs  race.rs  racer_row.rs  racers.rs  races_list.rs  th.rs  time_input.rs  track.rs  track_start.rs  upload_results.rs
stubs/: app.py  pyproject.toml  rfid.py
