[package]
name = "rustpolnak"
version = "0.1.0"
authors = ["Daniel Trnka <daniel.trnka@gmail.com>"]
edition = "2021"
default-run = "rustpolnak"

[dependencies]
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.47", features = ["derive"] }
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-logger = "0.6.2"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
log = "0.4.28"
nom = "8.0.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.225", features = ["derive"] }
tokio = "1.47.1"
tokio-serial = "5.4.5"
tokio-util = { version = "0.7.16", features = ["codec"] }
toml = "0.9.7"
tracing = "0.1.41"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
